Added vault repo data to bundle files.